# fw-copy-preproc-files-2-acq

./: .dockerignore  .env  .gitignore  README.md  dockerfile  manifest.json  pyproject.toml  requirements.txt  run.py
fw_gear_copy_files_2_acq/: get_analysis.py  main.py  parser.py  run_level.py
