[tool.poetry]
name = "fw_gear_copy_files_2_acq"
version = "0.0.0"
description = "Copy pre-processed files to acquisition"
authors = ["D3b-TIRU <flywheel@d3b.center>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://github.com/d3b-center/fw-copy-proc-2-acq"

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.5"
backoff = "^1.11.1"
fw-core-client = "^1.0.2"
fw-file = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.790"
fw-http-testserver = "^1.0.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
